--- a/personal-website.html
+++ b/personal-website.html
@@ -6,21 +6,19 @@
     <title>My Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="topnav">
+ <body>
+     <div class="topnav">
             <ul>
                 <button>About</button></li>
                 <button>Projects</button>
-            </ul>
-        
+            </ul> 
     </div>
         <div class = "my-picture">
-           <img src="IMG_6578.jpg"> 
+        <img src="IMG_6578.jpg"> 
         </div>
         <div class="about">Hello I am Samuel 🤓</div>
-
         <div class="resume">
-            <button href="insert here">Resume</button>
+             <button href="#">Resume</button>
         </div>
         <div class="social-media">
             <ul>
@@ -33,6 +31,5 @@
         <div class="message-me">
             <button>Message Me!</button>
         </div>
-           </ul>
 </body>
 </html>
